--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,10 @@
 #
 
 # Name of your site (displayed in the header)
-name: Your Name
+name: sculptedby.me
 
 # Short bio or description (displayed in the header)
-description: Web Developer from Somewhere
+description: Hi! I'm Sydney Karp and welcome to my blog - sculptedby.me. I am a PA specializing in dermatology in downtown NYC. 
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
