--- a/_config.yml
+++ b/_config.yml
@@ -6,10 +6,11 @@
 name: sculptedby.me
 
 # Short bio or description (displayed in the header)
-description: Hi! I'm Sydney Karp and welcome to my blog - sculptedby.me. I am a PA specializing in dermatology in downtown NYC. 
+description: Hi! I'm Sydney Karp and welcome to my blog. 
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: https://github.com/bensloane/bensloane.github.io/blob/master/images/syd.png
+# https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
 
 #
 # Flags below are optional
@@ -21,12 +22,12 @@ footer-links:
   email:
   facebook:
   flickr:
-  github: barryclark/jekyll-now
-  instagram:
+  github:
+  instagram: https://www.instagram.com/sculpted_by_sydney/?hl=en
   linkedin:
   pinterest:
   rss: # just type anything here for a working RSS icon
-  twitter: jekyllrb
+  twitter:
   stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
   youtube: # channel/<your_long_string> or user/<user-name>
   googleplus: # anything in your profile username that comes after plus.google.com/
