--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: sculptedby.me
 description: Hi! I'm Sydney Karp and welcome to my blog. 
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://github.com/bensloane/bensloane.github.io/blob/master/images/syd.png
+avatar: ../images/syd.png
 # https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
 
 #
