--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ footer-links:
   facebook:
   flickr:
   github:
-  instagram: https://www.instagram.com/sculpted_by_sydney/
+  instagram: sculpted_by_sydney
   linkedin:
   pinterest:
   rss: # just type anything here for a working RSS icon
